Fixed CustomDictionary